VEGA-3109 : add get for /updates endpoint
