# docs/openapi/openapi.yaml
@@ -161,6 +161,43 @@ paths:
         httpMethod: "POST"
         type: "aws_proxy"
         contentHandling: "CONVERT_TO_TEXT"
+    get:
+      operationId: getUpdates
+      summary: Get list of updates on an LPA
+      responses:
+        "200":
+          description: Updates found
+          content:
+            application/json:
+            schema:
+              allOf:
+                - $ref: "#/components/schemas/Update"
+                - type: object
+                  properties:
+                    applied:
+                      type: string
+                      format: date-time
+                    author:
+                      type: string
+        "400":
+          description: Invalid request
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/BadRequestError"
+        "404":
+          description: Updates for LPA not found
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/NotFoundError"
+      x-amazon-apigateway-auth:
+        type: "AWS_IAM"
+      x-amazon-apigateway-integration:
+        uri: ${lambda_getupdates_invoke_arn}
+        httpMethod: "POST"
+        type: "aws_proxy"
+        contentHandling: "CONVERT_TO_TEXT"
   /health-check:
     get:
       operationId: healthCheck
