# lambda/getupdates/main.go
@@ -1,0 +1,102 @@
+package main
+
+import (
+	"context"
+	"encoding/json"
+	"log/slog"
+	"os"
+
+	"github.com/aws/aws-lambda-go/events"
+	"github.com/aws/aws-lambda-go/lambda"
+	"github.com/aws/aws-sdk-go-v2/aws"
+	"github.com/aws/aws-sdk-go-v2/config"
+	"github.com/ministryofjustice/opg-data-lpa-store/internal/ddb"
+	"github.com/ministryofjustice/opg-data-lpa-store/internal/shared"
+	"github.com/ministryofjustice/opg-go-common/telemetry"
+)
+
+type Logger interface {
+	Error(string, ...any)
+	Info(string, ...any)
+	Debug(string, ...any)
+}
+
+type Store interface {
+	GetChanges(ctx context.Context, uid string) ([]shared.Update, error)
+}
+
+type Verifier interface {
+	VerifyHeader(events.APIGatewayProxyRequest) (*shared.LpaStoreClaims, error)
+}
+
+type Lambda struct {
+	store    Store
+	verifier Verifier
+	logger   Logger
+}
+
+func (l *Lambda) HandleEvent(ctx context.Context, event events.APIGatewayProxyRequest) (events.APIGatewayProxyResponse, error) {
+	_, err := l.verifier.VerifyHeader(event)
+	if err != nil {
+		l.logger.Info("Unable to verify JWT from header")
+		return shared.ProblemUnauthorisedRequest.Respond()
+	}
+
+	l.logger.Debug("Successfully parsed JWT from event header")
+
+	response := events.APIGatewayProxyResponse{
+		StatusCode: 500,
+		Body:       "{\"code\":\"INTERNAL_SERVER_ERROR\",\"detail\":\"Internal server error\"}",
+	}
+
+	changes, err := l.store.GetChanges(ctx, event.PathParameters["uid"])
+	if err != nil {
+		l.logger.Error("error fetching LPA", slog.Any("err", err))
+		return shared.ProblemInternalServerError.Respond()
+	}
+
+	if len(changes) == 0 {
+		l.logger.Debug("No changes found")
+		return shared.ProblemNotFoundRequest.Respond()
+	}
+
+	body, err := json.Marshal(changes)
+	if err != nil {
+		l.logger.Error("error marshalling changes", slog.Any("err", err))
+		return shared.ProblemInternalServerError.Respond()
+	}
+
+	response.StatusCode = 200
+	response.Body = string(body)
+
+	return response, nil
+}
+
+func main() {
+	ctx := context.Background()
+	logger := telemetry.NewLogger("opg-data-lpa-store/getupdates")
+
+	// set endpoint to "" outside dev to use default AWS resolver
+	endpointURL := os.Getenv("AWS_BASE_URL")
+
+	cfg, err := config.LoadDefaultConfig(ctx)
+	if err != nil {
+		logger.Error("failed to load aws config", slog.Any("err", err))
+	}
+
+	if endpointURL != "" {
+		cfg.BaseEndpoint = aws.String(endpointURL)
+	}
+
+	l := &Lambda{
+		store: ddb.New(
+			cfg,
+			os.Getenv("DDB_TABLE_NAME_DEEDS"),
+			os.Getenv("DDB_TABLE_NAME_CHANGES"),
+		),
+		verifier: shared.NewJWTVerifier(cfg, logger),
+		logger:   logger,
+	}
+
+	lambda.Start(l.HandleEvent)
+}
